--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!-- cheacking git commit -->
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
