--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- cheacking git commit -->
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -26,7 +26,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
+                 <!-- <li><a href="#skills" class="menu-btn">Skills</a></li>  -->
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -201,7 +201,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Nitish</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.nitishweb.com">Nitish</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
